Finished herself styling

--- a/app/index.html
+++ b/app/index.html
@@ -49,12 +49,17 @@
         </div>
     </header>
     <main class="site-content p-herself">
+        <!-- Hero -->
         <div class="hero hero--subpage">
             <h1 class="hero__heading">
                 <div class="container">
                     <p class="hero__heading--intro">HERSELF</p>
                     <p class="hero__heading--main">Hello, I'm Wonmi Kwon.</p>
-                    <p class="hero__heading--sub">Let me tell you my story.</p>
+                    <p class="hero__heading--sub">
+                        I've been reborn as a designer through constant reflection on myself.
+                        I spent my 20's thinking of who I am and how I want to live.
+                        I chose the path people don't take, and I'm standing here proudly, with a big dream, as a designer.
+                    </p>
                 </div>
             </h1>
             <a href="#" class="btn--edge btn--edge--bottom-right btn--edge--f-bw">
@@ -65,6 +70,7 @@
                 Scroll
             </span>
         </div>
+
         <nav class="secondary-nav">
             <div class="secondary-nav-container">
                 <ul class="secondary-nav__list">
@@ -80,6 +86,8 @@
                 </ul>
             </div>
         </nav>
+
+        <!-- My Path -->
         <section id="myself-paths" class="anchored-section myself-section section section__myself " data-matching-link="#myself-paths-link">
             <div class="path-container">
                 <div class="section__container--full">
@@ -110,7 +118,7 @@
             </div>
             <div class="path-container">
                 <div class="section__container--full">
-                    <header class="section__header">
+                    <header class="section__header section__header--to-right">
                         <div class="section__eyebrow">SCHOOL DAYS</div>
                         <h2 class="section__heading">A Girl under her family's expectation</h2>
                         <div class="section__paragraph">
@@ -136,46 +144,70 @@
                 </div>
             </div>
         </section>
+
+        <!-- My Skills -->
         <section id="myself-skills" class="anchored-section myself-section section section__design" data-matching-link="#myself-skills-link">
-            <!-- (1) technical skills-->
-            <div class="section__container--full ph-small">
+            <!-- (1) tool sets-->
+            <div class="section__container--full ph-small project__subtitle--ac">
                 <div class="section__eyebrow">TECHNICAL SKILLS</div>
-                <h2 class="section__heading">To become a T-shaped Professional</h2>
+                <h2 class="section__heading">What can I do for you?</h2>
                 <div class="row row--gutters project__box bg--w">
-                    <div class="col--m-4">
-                        <div class="p-20 mini-box-container">
-                            <h3 class="p--desc mb-20">UX research & planning</h3>
-                            <ul class="bullet-list">
-                                <li class="bullet-list__item">Usability Analysis</li>
-                                <li class="bullet-list__item">Competitive research</li>
-                                <li class="bullet-list__item">UX, UI research</li>
-                                <li class="bullet-list__item">Content development</li>
-                                <li class="bullet-list__item">Information Architecture Improvement</li>
-                            </ul>
+                    <div class="col--m-6">
+                        <div class="iconbox">
+                            <div class="iconbox__icon">
+                                <img src="./assets/images/i-planning.svg" alt="photoshop logo">
+                            </div>
+                            <h3 class="iconbox__heading">
+                                UX Planning
+                            </h3>
+                            <p class="iconbox__desc">
+                                User Experience should come first in all digital product development.
+                                Using data earned from quantitative & qualitative research, I set up
+                                a user-centered goal and develop content strategy and information architecture.
+                            </p>
                         </div>
                     </div>
-                    <div class="col--m-4">
-                        <div class="p-20 mini-box-container">
-                            <h3 class="p--desc mb-20">Website & App Design</h3>
-                            <ul class="bullet-list">
-                                <li class="bullet-list__item">Design system development</li>
-                                <li class="bullet-list__item">Visual Strategy aligning with Content</li>
-                                <li class="bullet-list__item">Focus on readability</li>
-                                <li class="bullet-list__item">Icons and illustrations</li>
-                                <!-- <li class="bullet-list__item"></li> -->
-                            </ul>
+                    <div class="col--m-6">
+                        <div class="iconbox">
+                            <div class="iconbox__icon">
+                                <img src="./assets/images/i-planning.svg" alt="photoshop logo">
+                            </div>
+                            <h3 class="iconbox__heading">
+                                UI Design
+                            </h3>
+                            <p class="iconbox__desc">
+                                With design system in mind, I try to design persuasive, easy-to-understand UI,
+                                and make sure it has a enjoyable rhythm with balanced layout & high legibility of typography.
+                                I get inspiration from all kinds of designs around me.
+                            </p>
                         </div>
                     </div>
-                    <div class="col--m-4">
-                        <div class="p-20 mini-box-container bg--w">
-                            <h3 class="p--desc mb-20">And More</h3>
-                            <ul class="bullet-list">
-                                <li class="bullet-list__item">Custom Wordpress site building</li>
-                                <li class="bullet-list__item">Print design deliverables</li>
-                                <li class="bullet-list__item">Simple video editing</li>
-                                <li class="bullet-list__item">Simple app development</li>
-                                <!-- <li class="bullet-list__item">Information Architecture Improvement</li> -->
-                            </ul>
+                    <div class="col--m-6">
+                        <div class="iconbox">
+                            <div class="iconbox__icon">
+                                <img src="./assets/images/i-planning.svg" alt="photoshop logo">
+                            </div>
+                            <h3 class="iconbox__heading">
+                                Website & Web app development
+                            </h3>
+                            <p class="iconbox__desc">
+                                I love using it at the first stage of testing overall UI.
+                                Also for photo retouching, promotion design, and deliverables.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col--m-6">
+                        <div class="iconbox">
+                            <div class="iconbox__icon">
+                                <img src="./assets/images/i-planning.svg" alt="photoshop logo">
+                            </div>
+                            <h3 class="iconbox__heading">
+                                Branding Design for Small Businesses
+                            </h3>
+                            <p class="iconbox__desc">
+                                I love using it at the first stage of testing overall UI.
+                                Also for photo retouching, promotion design, and deliverables.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -194,12 +226,34 @@
                             kind of product to develop. This process included</p>
                     </div>
                     <div class="col--m-6">
-                        <figure>
-                            <div class="illust-two-circles">
-                                <div class="illust-two-circles__left clip-circle">
+                        <figure class="circles">
+                            <div class="circles__center">
+                                <div class="circles__item circles__item--learning">
+                                    KEEP<br>LEARNING
                                 </div>
-                                <div class="illust-two-circles__right">
-                                    <img src="./assets/images/icons/icon-phone.png" class="icon-phone" alt="phone icon">
+
+                                <div class="circles__item circles__item--photoshop">
+                                    <img class="circles__img" src="./assets/images/i-photoshop.svg" alt="photoshop logo">
+                                </div>
+
+                                <div class="circles__item circles__item--illustrator">
+                                    <img class="circles__img" src="./assets/images/i-illustrator.svg" alt="illustrator logo">
+                                </div>
+
+                                <div class="circles__item circles__item--sketch">
+                                    <img class="circles__img" src="./assets/images/i-sketch.svg" alt="sketch logo">
+                                </div>
+
+                                <div class="circles__item circles__item--vsc">
+                                    <img class="circles__img" src="./assets/images/i-visual-studio-code.svg" alt="visual studio code logo">
+                                </div>
+
+                                <div class="circles__item circles__item--github">
+                                    <img class="circles__img" src="./assets/images/i-github.svg" alt="Github logo">
+                                </div>
+
+                                <div class="circles__item circles__item--marvel">
+                                    <img class="circles__img" src="./assets/images/i-marvel.svg" alt="marvel logo">
                                 </div>
                             </div>
                         </figure>
@@ -266,56 +320,31 @@
                     </ul>
                 </div>
             </section>
-            <!-- (5) User Flow-->
-            <!-- <section class="section section__container--full">
-                <div class="row row--gutters project__col--flip-order">
+        </section>
+
+        <!-- My Goals -->
+        <section id="myself-goals" class="anchored-section myself-section section--development" data-matching-link="#myself-goals-link">
+            <div class="section__container--full mt-none mb-100 ph-small">
+                <div class="row row--gutters project__box bg--w project__col--flip-order">
                     <div class="col--m-6">
-                        <header class="row">
-                            <span class="project__subtitle project__subtitle--number">05</span>
-                            <h2 class="project__subtitle">User Flow Chart</h2>
-                        </header>
-                        <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
-                            kind of product to develop. This process
-                            included</p>
-                        <p class="p--desc p--desc--mb project__img--desc">We went through 3 iterations to decide what
-                            kind of product to develop. This process We went through 3 iterations to decide what
-                            kind of product to develop. This process included</p>
+                        <div class="section__illust section__illust--center">
+                            <div class="illust__container is-in-view illust__container--height">
+                                <figure class="illust__circle illust__circle--b-left">Education</figure>
+                                <figure class="illust__circle illust__circle--t-center">Small Business</figure>
+                                <figure class="illust__circle illust__circle--b-right">Culture</figure>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col--m-6">
-                        <div class="project__flow-chart">
-                            <a href="./assets/images/flowchart.jpg">
-                                <figure>
-                                    <img src="./assets/images/flowchart.jpg" alt="flow chart">
-                                </figure>
-                            </a>
+                    <div class="col--m-6 project__col--flip-order--first">
+                        <div class="section__eyebrow">DREAMER</div>
+                        <h2 class="section__heading">Believe in Power of UX Design.</h2>
+                        <div class="section__paragraph">
+                            We work in the space where brands and technology meet. Where brands willing to create something
+                            unique and We work in the space where brands and technology meet.
+                            exciting can explore endless ways to connect with consumers.
                         </div>
                     </div>
                 </div>
-            </section> -->
-
-        </section>
-        <section id="myself-goals" class="anchored-section myself-section section section--development" data-matching-link="#myself-goals-link">
-            <div class="section__container">
-                <header class="section__header">
-                    <h2 class="section__heading">Believe in Power of UX Design.</h2>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
-                        exciting can explore endless ways to connect with consumers.
-                    </div>
-                    <div class="section__illust">
-                        <div class="illust__container is-in-view">
-                            <figure class="illust__circle illust__circle--left">Client's Needs</figure>
-                            <figure class="illust__circle illust__circle--center">Design Thinking</figure>
-                            <figure class="illust__circle illust__circle--right">Users' Needs</figure>
-                        </div>
-                    </div>
-                    <div class="section__paragraph">
-                        We work in the space where brands and technology meet. Where brands willing to create something
-                        unique and
-                        exciting can explore endless ways to connect with consumers.
-                    </div>
-                </header>
             </div>
         </section>
     </main>
