Fixed styling of hero of design collection page

--- a/app/index.html
+++ b/app/index.html
@@ -54,10 +54,20 @@
             <h1 class="hero__heading">
                 <div class="container">
                     <p class="hero__heading--intro">DESIGN</p>
-                    <p class="hero__heading--main">Focused on user experience</p>
-                    <p class="hero__heading--sub">Let me tell you my story.</p>
+                    <p class="hero__heading--main">Yes, I fell in love with design.</p>
+                    <p class="hero__heading--sub">
+                        I've been reborn as a designer through constant reflection on myself.
+                        I spent my 20's thinking ople don't take, and I'm standing here proudly, with a big dream, as a designer.
+                    </p>
                 </div>
             </h1>
+            <a href="#" class="btn--edge btn--edge--bottom-right btn--edge--f-bw">
+                <p>Quick index</p>
+            </a>
+            <span class="index-scroll">
+                <span class="index-scroll__arrow"></span>
+                Scroll
+            </span>
         </div>
         <nav class="secondary-nav">
             <div class="secondary-nav-container">
