Fixed white space in Design page sections

--- a/app/index.html
+++ b/app/index.html
@@ -21,11 +21,11 @@
                         <img src="./assets/images/icons/logo-emblem--bl.svg" alt="logo emblem" class="logo-emblem">
                     </div>
                 </div>
-                <div class="site-header__pagination">
+                <!-- <div class="site-header__pagination">
                     <span>Part of
                         <a href="#">Design</a>
                     </span>
-                </div>
+                </div> -->
                 <div class="site-header__menu-content">
                     <nav class="primary-nav">
                         <ul class="primary-nav__list">
@@ -73,19 +73,20 @@
             <div class="secondary-nav-container">
                 <ul class="secondary-nav__list">
                     <li class="secondary-nav__item">
-                        <a href="#design-agency" id="design-agency-link" class="secondary-nav__link">COMPANY</a>
+                        <a href="#design-agency" id="design-agency-link" class="secondary-nav__link">COMPANY (3)</a>
                     </li>
                     <li class="secondary-nav__item">
-                        <a href="#design-academy" id="design-academy-link" class="secondary-nav__link">ACADEMY</a>
+                        <a href="#design-academy" id="design-academy-link" class="secondary-nav__link">ACADEMY (6)</a>
                     </li>
                     <li class="secondary-nav__item">
-                        <a href="#design-freelance" id="design-freelance-link" class="secondary-nav__link">PERSONAL</a>
+                        <a href="#design-freelance" id="design-freelance-link" class="secondary-nav__link">PERSONAL (3)</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <section id="design-agency" class="anchored-section section section__myself " data-matching-link="#design-agency-link">
             <div class="section__container--full mt-none">
+                <h2 class="section__heading ph-small">Company Works</h2>
                 <div class="section__side section__side--right-padding">
                     <div class="row gutters">
                         <div class="col--s-6">
@@ -143,8 +144,10 @@
                 </div>
             </div>
         </section>
-        <section id="design-academy" class="anchored-section section section__academy" data-matching-link="#design-academy-link">
+
+        <section id="design-academy" class="anchored-section section section__academy pt-none" data-matching-link="#design-academy-link">
             <div class="section__container--full mt-none">
+                <h2 class="section__heading ph-small">Academy Works</h2>
                 <div class="section__side section__side--right-padding">
                     <div class="row gutters">
                         <div class="col--s-6">
@@ -253,8 +256,10 @@
                 </div>
             </div>
         </section>
-        <section id="design-freelance" class="anchored-section section" data-matching-link="#design-freelance-link">
+
+        <section id="design-freelance" class="anchored-section section pt-none" data-matching-link="#design-freelance-link">
             <div class="section__container--full mt-none">
+                <h2 class="section__heading ph-small">Personal Works</h2>
                 <div class="section__side section__side--right-padding">
                     <div class="row gutters">
                         <div class="col--s-6">
@@ -312,6 +317,7 @@
                 </div>
             </div>
         </section>
+
     </main>
     <footer class="site-footer">
         <div class="container">
