Set up quick menu functionality (styling needed)

--- a/app/index.html
+++ b/app/index.html
@@ -56,12 +56,12 @@
                     <p class="hero__heading--intro">DESIGN</p>
                     <p class="hero__heading--main">Yes, I fell in love with design.</p>
                     <p class="hero__heading--sub">
-                        I've been reborn as a designer through constant reflection on myself.
+                        I've been recloseIconQuickNavborn as a designer through constant reflection on myself.
                         I spent my 20's thinking ople don't take, and I'm standing here proudly, with a big dream, as a designer.
                     </p>
                 </div>
             </h1>
-            <a href="#" class="btn--edge btn--edge--bottom-right btn--edge--f-bw">
+            <a class="quickNavBtn btn--edge btn--edge--bottom-right btn--edge--f-bw">
                 <p>Quick index</p>
             </a>
             <span class="index-scroll">
@@ -422,7 +422,46 @@
             </div>
         </div>
     </div>
-
+    <div class="overlay-nav--quick-nav overlayQuickNav">
+        <div class="container--extended overlay-nav__container">
+            <div class="overlay-nav__close-icon icon__close closeIconQuickNav">
+                <div class="icon__close--center"></div>
+            </div>
+            <div class="overlay-nav__content">
+                <div class="overlay-nav__head">
+                    <div class="overlay-nav__logo">
+                        <img src="./assets/images/icons/logo-emblem--bl.svg" alt="logo emblem" class="logo-emblem">
+                    </div>
+                    <p class="overlay-nav__copywords">
+                        a UX/UI designer, who keeps learning to <span class="overlay-nav__keyword">understand</span>
+                    </p>
+                </div>
+                <ul class="overlay-nav__list">
+                    <li class="overlay-nav__item">
+                        <a href="#" class="overlay-nav__link">project 01</a>
+                    </li>
+                    <li class="overlay-nav__item">
+                        <a href="#" class="overlay-nav__link">project 02</a>
+                    </li>
+                    <li class="overlay-nav__item">
+                        <a href="#" class="overlay-nav__link">project 03</a>
+                    </li>
+                </ul>
+                <div class="overlay-nav__bottom">
+                    <div class="overlay-nav__cta">
+                        <a href="#" class="btn--plain">Work Inquiry</a>
+                    </div>
+                    <div class="overlay-nav__contact">
+                        <p>wonmi.design@gmail.com</p>
+                        <div class="sns-container">
+                            <a href="#" class="sns-item">LinkedIn</a>
+                            <a href="#" class="sns-item">Twitter</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="./temp/scripts/App.js"></script>
 </body>
 
