Added layout for quick nav

--- a/app/index.html
+++ b/app/index.html
@@ -422,18 +422,15 @@
             </div>
         </div>
     </div>
-    <div class="overlay-nav--quick-nav overlayQuickNav">
+    <div class="overlay-quick-nav overlayQuickNav">
         <div class="container--extended overlay-nav__container">
             <div class="overlay-nav__close-icon icon__close closeIconQuickNav">
                 <div class="icon__close--center"></div>
             </div>
             <div class="overlay-nav__content">
                 <div class="overlay-nav__head">
-                    <div class="overlay-nav__logo">
-                        <img src="./assets/images/icons/logo-emblem--bl.svg" alt="logo emblem" class="logo-emblem">
-                    </div>
                     <p class="overlay-nav__copywords">
-                        a UX/UI designer, who keeps learning to <span class="overlay-nav__keyword">understand</span>
+                         Project List</span>
                     </p>
                 </div>
                 <ul class="overlay-nav__list">
@@ -447,18 +444,6 @@
                         <a href="#" class="overlay-nav__link">project 03</a>
                     </li>
                 </ul>
-                <div class="overlay-nav__bottom">
-                    <div class="overlay-nav__cta">
-                        <a href="#" class="btn--plain">Work Inquiry</a>
-                    </div>
-                    <div class="overlay-nav__contact">
-                        <p>wonmi.design@gmail.com</p>
-                        <div class="sns-container">
-                            <a href="#" class="sns-item">LinkedIn</a>
-                            <a href="#" class="sns-item">Twitter</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
